--- a/config/ausfcfg.yaml
+++ b/config/ausfcfg.yaml
@@ -14,6 +14,7 @@ configuration:
   serviceNameList: # the SBI services provided by this AUSF, refer to TS 29.509
     - nausf-auth # Nausf_UEAuthentication service
   nrfUri: http://127.0.0.10:8000 # a valid URI of NRF
+  nrfCertPem: cert/nrf.pem # NRF Certificate
   plmnSupportList: # the PLMNs (Public Land Mobile Network) list supported by this AUSF
     - mcc: 208 # Mobile Country Code (3 digits string, digit: 0~9)
       mnc: 93  # Mobile Network Code (2 or 3 digits string, digit: 0~9)
