--- a/config/multiUPF/smfcfg.ulcl.yaml
+++ b/config/multiUPF/smfcfg.ulcl.yaml
@@ -1,5 +1,5 @@
 info:
-  version: 1.0.1
+  version: 1.0.7
   description: SMF initial local configuration
 
 configuration:
@@ -7,11 +7,11 @@ configuration:
   sbi:
     scheme: http
     registerIPv4: 127.0.0.2 # IP used to register to NRF
-    bindingIPv4: 127.0.0.2  # IP used to bind the service
+    bindingIPv4: 127.0.0.2 # IP used to bind the service
     port: 8000
     tls:
-      key: free5gc/support/TLS/smf.key
-      pem: free5gc/support/TLS/smf.pem
+      key: cert/smf.key
+      pem: cert/smf.pem
   serviceNameList:
     - nsmf-pdusession
     - nsmf-event-exposure
@@ -22,7 +22,7 @@ configuration:
         sd: 010203
       dnnInfos:
         - dnn: internet
-          dns: 
+          dns:
             ipv4: 8.8.8.8
             ipv6: 2001:4860:4860::8888
     - sNssai:
@@ -30,7 +30,7 @@ configuration:
         sd: 112233
       dnnInfos:
         - dnn: internet
-          dns: 
+          dns:
             ipv4: 8.8.8.8
             ipv6: 2001:4860:4860::8888
     - sNssai:
@@ -38,20 +38,27 @@ configuration:
         sd: 112234
       dnnInfos:
         - dnn: internet
-          dns: 
+          dns:
             ipv4: 8.8.8.8
             ipv6: 2001:4860:4860::8888
+  plmnList: # the list of PLMN IDs that this SMF belongs to (optional, remove this key when unnecessary)
+    - mcc: 208 # Mobile Country Code (3 digits string, digit: 0~9)
+      mnc: 93 # Mobile Network Code (2 or 3 digits string, digit: 0~9)
+  locality: area1 # Name of the location where a set of AMF, SMF, PCF and UPFs are located
   pfcp:
-    addr: 10.200.200.1
-  userplane_information:
-    up_nodes:
+    nodeID: 10.200.200.1
+    listenAddr: 10.200.200.1
+    externalAddr: 10.200.200.1
+  userplaneInformation:
+    upNodes:
       gNB1:
         type: AN
         an_ip: 192.188.2.3
 
       UPF1:
         type: UPF
-        node_id: 10.200.200.101
+        nodeID: 10.200.200.101
+        addr: 10.200.200.101
         sNssaiUpfInfos:
           - sNssai:
               sst: 1
@@ -67,32 +74,37 @@ configuration:
           - interfaceType: N3
             endpoints:
               - 10.200.200.101
-            networkInstance: internet
+            networkInstances:
+              - internet
           - interfaceType: N9
             endpoints:
               - 10.200.200.101
-            networkInstance: internet
+            networkInstances:
+              - internet
 
       UPF2:
         type: UPF
-        node_id: 10.200.200.102
+        nodeID: 10.200.200.102
+        addr: 10.200.200.102
         sNssaiUpfInfos:
           - sNssai:
               sst: 1
               sd: 010203
             dnnUpfInfoList:
-               - dnn: internet
-                 pools:
-                  - cidr: 60.60.0.0/16
+              - dnn: internet
+                pools:
+                  - cidr: 10.60.0.0/16
         interfaces:
           - interfaceType: N9
             endpoints:
               - 10.200.200.102
-            networkInstance: internet
+            networkInstances:
+              - internet
 
       UPF3:
         type: UPF
-        node_id: 10.200.200.103
+        nodeID: 10.200.200.103
+        addr: 10.200.200.103
         sNssaiUpfInfos:
           - sNssai:
               sst: 1
@@ -100,15 +112,17 @@ configuration:
             dnnUpfInfoList:
               - dnn: internet
                 pools:
-                  - cidr: 60.61.0.1/32
+                  - cidr: 10.61.0.1/32
         interfaces:
           - interfaceType: N9
             endpoints:
               - 10.200.200.103
-            networkInstance: internet
+            networkInstances:
+              - internet
       UPF4:
         type: UPF
-        node_id: 10.200.200.104
+        nodeID: 10.200.200.104
+        addr: 10.200.200.104
         sNssaiUpfInfos:
           - sNssai:
               sst: 1
@@ -116,15 +130,17 @@ configuration:
             dnnUpfInfoList:
               - dnn: internet
                 pools:
-                  - cidr: 60.62.0.1/32
+                  - cidr: 10.62.0.1/32
         interfaces:
           - interfaceType: N9
             endpoints:
               - 10.200.200.104
-            networkInstance: internet
+            networkInstances:
+              - internet
       UPF5:
         type: UPF
-        node_id: 10.200.200.105
+        nodeID: 10.200.200.105
+        addr: 10.200.200.105
         sNssaiUpfInfos:
           - sNssai:
               sst: 1
@@ -132,15 +148,17 @@ configuration:
             dnnUpfInfoList:
               - dnn: internet
                 pools:
-                  - cidr: 60.63.0.1/32
+                  - cidr: 10.63.0.1/32
         interfaces:
           - interfaceType: N3
             endpoints:
               - 10.200.200.105
-            networkInstance: internet
+            networkInstances:
+              - internet
       UPF6:
         type: UPF
-        node_id: 10.200.200.106
+        nodeID: 10.200.200.106
+        addr: 10.200.200.106
         sNssaiUpfInfos:
           - sNssai:
               sst: 1
@@ -148,39 +166,36 @@ configuration:
             dnnUpfInfoList:
               - dnn: internet
                 pools:
-                  - cidr: 60.64.0.1/32
+                  - cidr: 10.64.0.1/32
         interfaces:
           - interfaceType: N3
             endpoints:
               - 10.200.200.106
-            networkInstance: internet
+            networkInstances:
+              - internet
     links:
       - A: gNB1
         B: UPF5
       - A: gNB1
         B: UPF6
   nrfUri: http://127.0.0.10:8000
+  nrfCertPem: cert/nrf.pem # NRF Certificate
   ulcl: true
 
-logger:
-  SMF:
-    debugLevel: info
-    ReportCaller: false
-  NAS:
-    debugLevel: info
-    ReportCaller: false
-  NGAP:
-    debugLevel: info
-    ReportCaller: false
-  Aper:
-    debugLevel: info
-    ReportCaller: false
-  PathUtil:
-    debugLevel: info
-    ReportCaller: false
-  OpenApi:
-    debugLevel: info
-    ReportCaller: false
-  PFCP:
-    debugLevel: info
-    ReportCaller: false
+  # retransmission timer for pdu session modification command
+  t3591:
+    enable: true     # true or false
+    expireTime: 16s   # default is 6 seconds
+    maxRetryTimes: 3 # the max number of retransmission
+  # retransmission timer for pdu session release command
+  t3592:
+    enable: true     # true or false
+    expireTime: 16s   # default is 6 seconds
+    maxRetryTimes: 3 # the max number of retransmission
+  urrPeriod: 10 # default usage report period in seconds
+  urrThreshold: 1000 # default usage report threshold in bytes
+  requestedUnit: 1000
+logger: # log output setting
+  enable: true # true or false
+  level: info # how detailed to output, value: trace, debug, info, warn, error, fatal, panic
+  reportCaller: false # enable the caller report or not, value: true or false
