--- a/config/multiUPF/uerouting.yaml
+++ b/config/multiUPF/uerouting.yaml
@@ -1,5 +1,5 @@
 info:
-  version: 1.0.1
+  version: 1.0.7
   description: Routing information for UE
 
 ueRoutingInfo: # the list of UE routing information
@@ -18,8 +18,23 @@ ueRoutingInfo: # the list of UE routing information
       - A: UPF1
         B: UPF4
     specificPath:
-      - dest: 60.60.0.103/32 # the destination IP address on Data Network (DN)
+      - dest: 10.60.0.103/32 # the destination IP address on Data Network (DN)
         # the order of UPF nodes in this path. We use the UPF's name to represent each UPF node.
         # The UPF's name should be consistent with smfcfg.yaml
         path: [UPF1, UPF2]
-
+  UE2: # Group Name
+    members:
+    - imsi-2089300000002 # Subscription Permanent Identifier of the UE
+    topology:
+    # Network topology for this group (Uplink: A->B, Downlink: B->A)
+    # default path derived from this topology
+    # node name should be consistent with smfcfg.yaml
+      - A: gNB1
+        B: UPF1
+      - A: UPF1
+        B: UPF2
+    specificPath:
+      - dest: 10.6.0.0/24 # the destination IP address on Data Network (DN)
+        # the order of UPF nodes in this path. We use the UPF's name to represent each UPF node.
+        # The UPF's name should be consistent with smfcfg.yaml
+        path: [UPF1, UPF1]
