--- a/config/nssfcfg.yaml
+++ b/config/nssfcfg.yaml
@@ -16,6 +16,7 @@ configuration:
     - nnssf-nsselection # Nnssf_NSSelection service
     - nnssf-nssaiavailability # Nnssf_NSSAIAvailability service
   nrfUri: http://127.0.0.10:8000 # a valid URI of NRF
+  nrfCertPem: cert/nrf.pem # NRF Certificate
   supportedPlmnList: # the PLMNs (Public land mobile network) list supported by this NSSF
     - mcc: 208 # Mobile Country Code (3 digits string, digit: 0~9)
       mnc: 93 # Mobile Network Code (2 or 3 digits string, digit: 0~9)
