--- a/.gitmodules
+++ b/.gitmodules
@@ -35,8 +35,8 @@
 	url = https://github.com/nycu-ucr/chf.git
 	branch = next
 [submodule "onvm-upf"]
-	path = onvm-upf
+	path = NFs/onvm-upf
 	url = https://github.com/nycu-ucr/onvm-upf.git
 [submodule "xio"]
-	path = xio
+	path = NFs/xio
 	url = https://github.com/nycu-ucr/onvmpoller.git
