Add webconsole and UERANsim as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,9 @@
 [submodule "xio"]
 	path = NFs/xio
 	url = https://github.com/nycu-ucr/onvmpoller.git
+[submodule "webconsole"]
+	path = webconsole
+	url = https://github.com/free5gc/webconsole.git
+[submodule "UERANSIM"]
+	path = UERANSIM
+	url = https://github.com/aligungr/UERANSIM.git
