feat: Add data plane testing for registration test
- Enhanced registration_test.go with data plane validation
- Added ping test with GRE tunnel setup (ICMP connectivity)
- Added iperf3 throughput testing
- Updated README with test suite overview
- Updated .gitignore for test artifacts

Test validates:
- Control plane: NG Setup, Authentication, Registration, PDU Session
- Data plane: GRE tunnel, ICMP ping (packet loss, RTT)
- Performance metrics ready for iperf3 integration

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 bin/*
 log/*
+# Temporary documentation backups
+onvm_test/.doc_backup/
+
+# Test artifacts
+*.test
+*.log
+*.pid
+test_*.log
+
+# Generated certificates (keep originals)
+cert/*_[0-9a-f][0-9a-f][0-9a-f][0-9a-f]*.pem
+
